contrain main content on mobile to prevent breaking layout

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,6 +2,10 @@
   aside.toc.sidebar {
     display: none;
   }
+
+  main > .content {
+    overflow-x: auto;
+  }
 }
 
 @media screen and (min-width: 1024px) {
